solve images overlapping problems

--- a/static/css/scroll.css
+++ b/static/css/scroll.css
@@ -88,3 +88,8 @@
     justify-content: center;
     align-items: center;
 }
+
+.mySlides{
+    width:100%;
+    height:100%;
+}
